syntax = "proto3";

import "aelf/core.proto";

option csharp_namespace = "AElf.Kernel.SmartContract";

message TransactionResourceInfo {
    repeated aelf.ScopedStatePath paths = 1;
    bool non_parallelizable = 2;
    aelf.Hash transaction_id = 3;
}

message CodeRemarks {
    aelf.Hash code_hash = 1;
    bool non_parallelizable = 2;
}